# kvizik-backend

./: .env.dist  .env.example  .gitignore  Dockerfile  Makefile  README.md  config.env.example  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd-production.yaml  ci-build.yaml  ci-tests.yaml
app/: app.py  config.py  database.py
app/cats/: api.py  crud.py  models.py  schemas.py
app/core/: api.py  auth.py  crud.py  database.py  jwt.py  models.py  schemas.py
app/db/: database.py  models.py
app/ml-pipeline/: AITestGenerator.py  default.py  extras.py
app/ml_pipeline/: AITestGenerator.py  extras.py
